FullQa New/src/objects/ContactRole__c.object
<CustomObject>
    <description>The different roles and associated Contacts for any given GoLive</description>
    <fields>
        <fullName>CustomerUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Customer user assigned to a specific role</description>
        <inlineHelpText>The Customer user assigned to a specific role</inlineHelpText>
        <label>Customer User</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The internal user assigned to any given task</description>
        <inlineHelpText>The internal user assigned to any given task</inlineHelpText>
        <label>Internal User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer AvaFile Contact</fullName>
                </value>
                <value>
                    <fullName>Customer Installation Contact</fullName>
                </value>
                <value>
                    <fullName>Customer Pro Contact</fullName>
                </value>
                <value>
                    <fullName>Customer SDK Contact</fullName>
                </value>
                <value>
                    <fullName>Internal PRO Contact</fullName>
                </value>
                <value>
                    <fullName>Internal AR Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>(Deprecated) Contact Role</label>
    <nameField>
        <label>Contact Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>